# ffmpeg_player

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  ffmpeg-5.1.6.tar.xz:Zone.Identifier  ffmpeg-n5.1.6-9-gdcdfd7fb62-linux64-gpl-shared-5.1.tar.xz:Zone.Identifier  ffmpeg_player
ffmpeg_player_gui/: CMakeLists.txt
ffmpeg_player_gui/src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayerCore.cpp  PlayerCore.h  ThreadSafeQueue.h  main.cpp
include/libavutil/: ffversion.h
src/: ffmpeg_player.cpp
